# is-svg

./: .bumpversion.toml  CHANGELOG.adoc  Cargo.toml  README.md  clippy.toml  justfile
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: CI.yaml  SemverChecks.yaml  mirror.yaml
benches/: is_svg.rs  is_svg_string.rs  is_svgz.rs
examples/: README.adoc  issvg.rs
src/: lib.rs
tests/: is_svg.rs  is_svg_string.rs  is_svgz.rs
tests/data/: Ampel.svg.license  README.adoc  SVG_animation_using_SMIL.svg.license  green.css
tests/data/ferris/: README.adoc  corro.svg.license  corro.svgz  cuddlyferris.svgz  rustacean-flat-gesture.svgz  rustacean-flat-happy.svgz  rustacean-flat-noshadow.svg.license  rustacean-flat-noshadow.svgz  rustacean-orig-noshadow.svgz
tests/data/git/: Git-Logo-2Color.svg.license  README.adoc
tests/data/resources/: index.html  index.xhtml  quadratic_formula.mml
tests/data/resvg/: README.adoc  green.css.license  image-033.svg.license  image.gif.license  image.svgz
tests/data/usvg/: README.adoc  ellipse-simple-case-expected.svg.license  filter-with-object-units-multi-use-expected.svg.license
tests/data/w3/: README.adoc  svg-logo-v.jxl  svg-logo-v.svg.lz  svg-logo-v.svg.lz.license  svg-logo-v.svg.zst  svg-logo-v.svgz
tests/data/wikipedia/: README.adoc  SVG_animation_using_CSS.svg.license  SVG_animation_using_CSS.svgz  SVG_animation_using_ES.svgz  SVG_animation_using_SMIL.svgz
