# SPDX-FileCopyrightText: 2024 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "is-svg"
version = "0.1.1"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.74.0"
description = "Test whether a given data is a SVG image"
documentation = "https://docs.rs/is-svg"
readme = "README.md"
repository = "https://github.com/sorairolake/is-svg"
license = "Apache-2.0 OR MIT"
keywords = ["svg"]
categories = ["multimedia::images"]
include = ["/LICENSES", "/README.md", "/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usvg = { version = "0.43.0", default-features = false }

[dev-dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
