# SPDX-FileCopyrightText: 2024 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "is-svg"
version = "0.2.0"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2024"
rust-version = "1.85.0"
description = "Test whether a given data is a SVG image"
documentation = "https://docs.rs/is-svg"
readme = "README.md"
repository = "https://github.com/sorairolake/is-svg"
license = "Apache-2.0 OR MIT"
keywords = ["svg"]
categories = ["multimedia::images"]
include = ["/LICENSES", "/README.md", "/src"]

[dependencies]
usvg = { version = "0.45.0", default-features = false }

[dev-dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }

[lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
